--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "private": true,
   "dependencies": {
     "connect": "^3.2.0",
+    "cors": "^2.8.5",
     "js-yaml": "^3.3.0",
     "oas3-tools": "^2.2.3",
+    "shortid": "^2.2.16",
     "swagger-node-express": "^2.1.3",
     "swagger-ui-express": "^4.6.0"
   }
