--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "swagger"
@@ -20,5 +20,8 @@
     "shortid": "^2.2.16",
     "swagger-node-express": "^2.1.3",
     "swagger-ui-express": "^4.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
